--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 
 
-<script>
+<script language = "javascript">
 var PRICE_HOTDOG = parseFloat(3.25).toFixed(2);
 var PRICE_FRIES = parseFloat(2.00).toFixed(2);
 var PRICE_SODAS = parseFloat(1.50).toFixed(2);
